syntax = "proto3";

package user;

option go_package = "github.com/meoconbatu/cmsgrpc/view";

service UserService {
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
}
message AuthenticateUserRequest {
    string userName = 1;
    string password = 2;
}
message AuthenticateUserResponse {
}